<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReceiptPrinter.R58Activity">

    <Button
        android:id="@+id/bt_rcp"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/sample"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <Button
        android:id="@+id/bt_58text"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_text"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <Button
        android:id="@+id/bt_58barcode"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_barcode"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <Button
        android:id="@+id/bt_58qr"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_qrcode"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <Button
        android:id="@+id/bt_58bitmap"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_bitmap"
        android:layout_width="match_parent"
        android:layout_height="45dp" />


</LinearLayout>