<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OtherActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/printer_76"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bt_76text"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_text"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/bt_76bitmap"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_bitmap"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/printer_58IId"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bt_58iidsample"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_bitmap"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

</LinearLayout>